cabal-version:      2.4
name:               hecho
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LISENCE
author:             a5ob7r
maintainer:         12132068+a5ob7r@users.noreply.github.com
extra-source-files: README.md

executable hecho
  main-is:          Main.hs
  build-depends:
    , base            >=4.14.1.0
    , bytestring
    , network-simple

  hs-source-dirs:   app
  default-language: Haskell2010
